# Political_game_powered_by_AI

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: scenario.toml
config/countries/: china.toml  russia.toml  usa.toml
src/: config.rs  config_loader.rs  guardrails.rs  lib.rs  llm.rs  main.rs  orchestrator.rs  state.rs  types.rs
src/agents/: agent.rs  mod.rs
